Initial scrollbar fix

--- a/coda-prototype/css/style.css
+++ b/coda-prototype/css/style.css
@@ -30,8 +30,8 @@ SOFTWARE.
 
 #scrollbar-col {
   max-width: 120px !important;
-  padding-right: 0px;
-  padding-left: 15px;
+  padding-right: 15px;
+  padding-left: 5px;
   width: 8.33333333%;
   float:left;
 }
